# l4acados

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/act_dynamics/: 01_gp_model.pth  02_gp_model.pth  X_sim_with_gp_targets.csv  control_loop.py  exploratory_ref.npz  gp_input_with_u_output_sample.csv  gp_model.pth  gp_model_mix_ref.pth  gp_model_rich_mix_ref.pth  mix_ref.npz  multiple_sims_train.py  my_pendulum_model.py  nominal_simulation.py  pendulum_model.py  plot_trajectories.py  rich_mix_ref.npz  rich_mix_ref_expanded.npz  rollout_data_res_ctrl.npz  second_mix.npz  simulation.py  train_set.csv  training.py  utils.py
examples/again/: X_sim_with_gp_targets.csv  control_simulation.npz  gp_model.pth  main_control.py  nominal_data_collecting.py  nominal_no_actuation.npz  non_lo_so.py  pendulum_model.py  plot_trajectories.py  sim_data.npz  training.py  utils.py
examples/final_try/: basic_mpc_sim.py  control_simulation.npz  gp_model.pth  nominal.csv  nominal_data_collecting.py  nominal_no_actuation.npz  nominal_normalized.csv  pendulum_model.py  plot_trajectories.py  training.py  utils.py
examples/full_black_box/: second_mix.npz  utils.py
examples/inverted_pendulum/: gp_model_likelihood_state_dict.pth  gp_model_state_dict.pth  gp_model_train_data.pth  inverted_pendulum_custom_update.ipynb  inverted_pendulum_custom_update.py  inverted_pendulum_model_acados.py  inverted_pendulum_residual_learning.ipynb  inverted_pendulum_residual_learning.py  inverted_pendulum_residual_learning_zoro.ipynb  inverted_pendulum_zoro_acados.ipynb  (+7 more)
gpytorch_utils/: gp_hyperparam_training.py  gp_model.py
test/: test_gpytorch_learning_model.py
zero_order_gpmpc/: __init__.py  residual_learning_mpc.py  residual_model.py  zoro_acados.py  zoro_acados_custom_update.py  zoro_acados_residual_learning.py
(+4281 files in other folders)
