[project]
name = "zero_order_gpmpc"
version = "0.0.1"
authors = [
    { name="Amon Lahr", email="amlahr@ethz.ch" },
    { name="Joshua Näf", email="joshua.naef@ethz.ch" },
]
description = "A tailored SQP algorithm for learning-based model predictive control with ellipsoidal uncertainties"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "linear_operator @ git+https://github.com/naefjo/linear_operator@feature/exo-gp",
    "gpytorch @ git+https://github.com/naefjo/gpytorch@feature/exo-gp",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
where = ["src"]
